--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,11 @@
         "titleBar.activeBackground": "#1857a4",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#1857a499",
-        "titleBar.inactiveForeground": "#e7e7e799"
+        "titleBar.inactiveForeground": "#e7e7e799",
+        "editorGroup.border": "#1f6fd0",
+        "panel.border": "#1f6fd0",
+        "tab.activeBorder": "#1f6fd0",
+        "titleBar.border": "#1857a4"
     },
     "peacock.color": "#1857a4"
 }
